--- a/install
+++ b/install
@@ -1,5 +1,7 @@
 #!/bin/bash
 
+xcode-select --install
+
 #Check if homebrew is installed and install if not
 if $(! $(which -s brew));then
 	echo "Installing homebrew …”;
